# simple-mp3-downloader

./: Cargo.toml  README.md  win-setup.iss
.github/workflows/: build-win-release.yml
src/: drives.rs  gui.rs  main.rs  yt.rs
src/drives/: drive_imp.rs  drive_mod.rs
