[package]
name = "simple-mp3-downloader"
version = "1.1.1"
edition = "2024"

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita"] }
libadwaita = { version = "0.7.2", features = ["v1_6"] }
sysinfo = "0.33.1"
reqwest = "0.12.15"

[target.'cfg(target_os = "linux")'.dependencies]
xz2 = "0.1.7"
tar = "0.4.44"

[target.'cfg(target_os = "windows")'.dependencies]
sevenz-rust = "0.6.1"